syntax = "proto3";

import "entity/response.proto";

package grpc;
option go_package = ".;grpc";

message NodeServiceRegisterRequest {
  string node_key = 1;
  string node_name = 2;
  int32 max_runners = 3;
}

message NodeServiceSendHeartbeatRequest {
  string node_key = 1;
}

message NodeServiceSubscribeRequest {
  string node_key = 1;
}

enum NodeServiceSubscribeCode {
  PING = 0;
}

message NodeServiceSubscribeResponse {
  NodeServiceSubscribeCode code = 1;
}

service NodeService {
  rpc Register(NodeServiceRegisterRequest) returns (Response){};
  rpc SendHeartbeat(NodeServiceSendHeartbeatRequest) returns (Response){};
  rpc Subscribe(NodeServiceSubscribeRequest) returns (stream NodeServiceSubscribeResponse){};
}
